--- a/.github/workflows/link-issue.yml
+++ b/.github/workflows/link-issue.yml
@@ -29,7 +29,7 @@ jobs:
               }
             }
           variables: |
-            owner: ${{ github.event.repository.owner.name }}
+            owner: ${{ github.event.repository.owner }}
             repo: ${{ github.event.repository.name }}
             pr: ${{ github.event.pull_request.number}}
         env:
