--- a/.github/workflows/link-issue.yml
+++ b/.github/workflows/link-issue.yml
@@ -18,10 +18,13 @@ jobs:
             query issue($owner:String!,$repo:String!,$pr:Int!) {
               repository(owner:$owner,name:$repo) {
                 pullRequest(number: $pr) {
-                  closingIssuesReferences (first: 50) {
-                    edges {
-                      node {
-                        number
+                  closingIssuesReferences (first: 1) {
+                    nodes {
+                      number
+                      assignees(first: 1) {
+                        nodes {
+                          login
+                        }
                       }
                     }
                   }
@@ -35,14 +38,30 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Count linked issues
-        id: count_edges
+        id: count_nodes
         env:
           GH_DETAILS: ${{ steps.get_linked_issue.outputs.data }}
         run: |
-          GH_COUNT=$(echo "$GH_DETAILS" | jq '.repository.pullRequest.closingIssuesReferences.edges | length')
+          GH_COUNT=$(echo "$GH_DETAILS" | jq '.repository.pullRequest.closingIssuesReferences.nodes | length')
           echo "count=$GH_COUNT" >> "$GITHUB_OUTPUT"
+      - name: Check assignee count
+        id: assignee_ct
+        if: steps.count_nodes.outputs.count > 0
+        env:
+          GH_DETAILS: ${{ steps.get_linked_issue.outputs.data }}
+        run: |
+          GH_ASSIGNCT=$(echo "$GH_DETAILS" | jq '.repository.pullRequest.closingIssuesReferences.nodes[0].assignees.nodes | length')
+          echo "count=$GH_ASSIGNCT" >> "$GITHUB_OUTPUT"
+      - name: Check assignee
+        id: assignee
+        if: steps.count_nodes.outputs.count > 0 && steps.assignee_ct.outputs.count > 0
+        env:
+          GH_DETAILS: ${{ steps.get_linked_issue.outputs.data }}
+        run: |
+          GH_ASSIGN=$(echo "$GH_DETAILS" | jq '.repository.pullRequest.closingIssuesReferences.nodes[0].assignees.nodes[0].assignee')
+          echo "name=$GH_ASSIGN" >> "$GITHUB_OUTPUT"
       - name: Add issue-linked label
-        if: steps.count_edges.outputs.count > 0
+        if: steps.count_nodes.outputs.count > 0 && steps.assignee_ct.outputs.count > 0 && ${{ github.actor }} == steps.assignee.outputs.name
         run: |
           gh pr edit ${{ github.event.pull_request.number}} --add-label 'issue linked' --repo $GITHUB_REPOSITORY
         env:
